--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     <div class="container">
         <h1>Keyboard Drum Pad</h1>
         <div class="controls">
-            <button id="recordBtn">Record</button>
-            <button id="playBtn">Play</button>
-            <button id="exportBtn">Export</button>
-            <label>Metronome: <input type="number" id="bpm" value="120" min="40" max="240"> BPM</label>
-            <button id="startMetronome">Start</button>
-            <button id="stopMetronome">Stop</button>
+            <button id="resetKeys">Reset Keybinds</button>
         </div>
         <div class="drum-pad" id="padContainer"></div>
     </div>
