--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Keyboard Drum Pad</h1>
-        <div class="controls">
-            <button id="resetKeys">Reset Keybinds</button>
-        </div>
-        <div class="drum-pad" id="padContainer"></div>
-    </div>
+    <h1>Keyboard Drum Pad</h1>
+    <p>Click a pad to change its keybind</p>
+    <button id="resetKeys">Reset Keybinds</button>
+    <div id="padContainer" class="drum-pad"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
