--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <h1>Keyboard Drum Pad</h1>
     <p>Click a pad to change its keybind</p>
     <button id="resetKeys">Reset Keybinds</button>
+    
+    <!-- Displaying sound for each keybind -->
+    <div id="soundInfo">
+        <p>Key Bindings:</p>
+        <ul id="keyInfoList"></ul>
+    </div>
+
     <div id="padContainer" class="drum-pad"></div>
 
     <script src="script.js"></script>
-</body>
-</html>
+</
